RESOLVED FIXED300400
office.com: PowerPoint sometimes fails to reveal the focused content when keyboard comes up
https://bugs.webkit.org/show_bug.cgi?id=300400
Summary office.com: PowerPoint sometimes fails to reveal the focused content when key...
Ryosuke Niwa
Reported 2025-10-08 11:54:32 PDT
Sometimes, when focusing an editable field on power point app on office.com, we failed to reveal the focused content as we bring up the keyboard. The content momentarily shits downwards in such a case. Reliable reproduction steps: 1. Tap on editable text 2. Keyboard comes up 3. Dismiss the keyboard by tapping on the button on the right lower corner of the software keyboard 4. Tap on a different editable text <rdar://50384887>
Attachments
Ryosuke Niwa
Comment 1 2025-10-08 13:09:48 PDT
EWS
Comment 2 2025-10-08 15:08:08 PDT
Committed 301232@main (2d423cf755c8): <https://commits.webkit.org/301232@main> Reviewed commits have been landed. Closing PR #52021 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.