office.com: PowerPoint sometimes fails to reveal the focused content when keyboard comes up https://bugs.webkit.org/show_bug.cgi?id=300400 <rdar://50384887>

Reviewed by Wenson Hsieh.

The bug was caused by RevealFocusedElementDeferralReason::KeyboardWillShow never getting cleared in RevealFocusedElementDeferrer.
This happens because calling [self becomeFirstResponder] can trigger _keyboardWillShow synchronously before
RevealFocusedElementDeferrer is created in _continueElementDidFocus. Fixed the bug by moving the code to create the deferrer before
calling [self becomeFirstResponder].

Unfortunately no new tests since we couldn't make a layout test or an API test to reproduce this issue.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _continueElementDidFocus:requiresStrongPasswordAssistance:focusedElementInfo:activityStateChanges:restoreValues:]):

Canonical link: https://commits.webkit.org/301232@main