Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -8517,6 +8517,37 @@ static RetainPtr<NSObject <WKFormPeripheral>> createInputPeripheralWithView(WebK
     _legacyTextInputTraits = nil;
     _extendedTextInputTraits = nil;
 
+    // For elements that have selectable content (e.g. text field) we need to wait for the web process to send an up-to-date
+    // selection rect before we can zoom and reveal the selection. Non-selectable elements (e.g. <select>) can be zoomed
+    // immediately because they have no selection to reveal.
+    // We create RevealFocusedElementDeferrer before callin becomeFirstResponder as the latter can result in _keyboardWillShow.
+    if (requiresKeyboard) {
+        bool ignorePreviousKeyboardWillShowNotification = [] {
+            // In the case where out-of-process keyboard is enabled and the software keyboard is shown,
+            // we end up getting two sets of "KeyboardWillShow" -> "KeyboardDidShow" notifications when
+            // the keyboard animates up, after reloading input views. When the first set of notifications
+            // is dispatched underneath the call to -reloadInputViews above, the keyboard hasn't yet
+            // become full height, so attempts to reveal the focused element using the current height will
+            // fail. The second set of keyboard notifications contains the final keyboard height, and is the
+            // one we should use for revealing the focused element.
+            // See also: <rdar://111704216>.
+            if (!UIKeyboard.usesInputSystemUI)
+                return false;
+
+            auto keyboard = UIKeyboard.activeKeyboard;
+            return keyboard && !keyboard.isMinimized;
+        }();
+        _revealFocusedElementDeferrer = WebKit::RevealFocusedElementDeferrer::create(self, [&] {
+            OptionSet reasons { WebKit::RevealFocusedElementDeferralReason::EditorState };
+            if (!self._scroller.firstResponderKeyboardAvoidanceEnabled)
+                reasons.add(WebKit::RevealFocusedElementDeferralReason::KeyboardDidShow);
+            else if (_waitingForKeyboardAppearanceAnimationToStart || ignorePreviousKeyboardWillShowNotification)
+                reasons.add(WebKit::RevealFocusedElementDeferralReason::KeyboardWillShow);
+            return reasons;
+        }());
+        _page->setWaitingForPostLayoutEditorStateUpdateAfterFocusingElement(true);
+    }
+
     if (![self isFirstResponder])
         [self becomeFirstResponder];
 
@@ -8561,35 +8592,7 @@ static RetainPtr<NSObject <WKFormPeripheral>> createInputPeripheralWithView(WebK
     if (editableChanged)
         [_webView _scheduleVisibleContentRectUpdate];
 
-    // For elements that have selectable content (e.g. text field) we need to wait for the web process to send an up-to-date
-    // selection rect before we can zoom and reveal the selection. Non-selectable elements (e.g. <select>) can be zoomed
-    // immediately because they have no selection to reveal.
-    if (requiresKeyboard) {
-        bool ignorePreviousKeyboardWillShowNotification = [] {
-            // In the case where out-of-process keyboard is enabled and the software keyboard is shown,
-            // we end up getting two sets of "KeyboardWillShow" -> "KeyboardDidShow" notifications when
-            // the keyboard animates up, after reloading input views. When the first set of notifications
-            // is dispatched underneath the call to -reloadInputViews above, the keyboard hasn't yet
-            // become full height, so attempts to reveal the focused element using the current height will
-            // fail. The second set of keyboard notifications contains the final keyboard height, and is the
-            // one we should use for revealing the focused element.
-            // See also: <rdar://111704216>.
-            if (!UIKeyboard.usesInputSystemUI)
-                return false;
-
-            auto keyboard = UIKeyboard.activeKeyboard;
-            return keyboard && !keyboard.isMinimized;
-        }();
-        _revealFocusedElementDeferrer = WebKit::RevealFocusedElementDeferrer::create(self, [&] {
-            OptionSet reasons { WebKit::RevealFocusedElementDeferralReason::EditorState };
-            if (!self._scroller.firstResponderKeyboardAvoidanceEnabled)
-                reasons.add(WebKit::RevealFocusedElementDeferralReason::KeyboardDidShow);
-            else if (_waitingForKeyboardAppearanceAnimationToStart || ignorePreviousKeyboardWillShowNotification)
-                reasons.add(WebKit::RevealFocusedElementDeferralReason::KeyboardWillShow);
-            return reasons;
-        }());
-        _page->setWaitingForPostLayoutEditorStateUpdateAfterFocusingElement(true);
-    } else
+    if (!requiresKeyboard)
         [self _zoomToRevealFocusedElement];
 
     [self _updateAccessory];
